--- a/index.html
+++ b/index.html
@@ -5,20 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Task 1</title>
+  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js "></script>
 </head>
-<style>
-  .table {
-    border-collapse: separate;
-    border-spacing: 0 10px;
-  }
-</style>
 
 <body>
-  <div class="container m-5">
+  <div class="container ">
     <table class="table">
       <thead>
         <tr class="table-secondary">
@@ -34,10 +31,49 @@
         </tr>
       </thead>
       <tbody id="body-note-table">
-
       </tbody>
-
     </table>
+
+    <div class="collapse" id="collapseExample">
+      <div class="d-flex justify-content-end">
+        <form id="newNotesForm" class="col-6">
+
+          <label for="name">Name</label>
+          <input type="text" class="form-control" id="name">
+          <br>
+
+          <label for="created">Created</label>
+          <input type="date" class="form-control" id="created">
+          <br>
+
+          <label class="d-block" for="category">Category</label>
+          <select class="form-select" aria-label="Default select example" id="category">
+            <option value="Idea" selected>Idea</option>
+            <option value="Task">Task</option>
+            <option value="Random Thought">Random Thought</option>
+          </select>
+          <br>
+
+          <label for="content">Content</label>
+          <input type="text" class="form-control" id="content">
+          <br>
+
+          <label for="created">Dates</label>
+          <input type="date" class="form-control" id="dates">
+          <br>
+          <div class="d-flex justify-content-end mb-2">
+            <button type="submit" class="btn btn-primary" form="newNotesForm" id="submit-form-btn">Create note</button>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <div class="d-flex justify-content-end">
+      <button class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+        aria-expanded="false" aria-controls="collapseExample" id="open-close-form-btn">
+        Create note
+      </button>
+    </div>
 
     <table class="table mt-5">
       <thead>
