--- a/index.html
+++ b/index.html
@@ -34,33 +34,30 @@
       </tbody>
     </table>
 
-    <div class="collapse" id="collapseExample">
+    <div class="collapse mb-5" id="update-note-form">
+    </div>
+
+    <div class="collapse" id="create-note-form">
       <div class="d-flex justify-content-end">
         <form id="newNotesForm" class="col-6">
 
           <label for="name">Name</label>
-          <input type="text" class="form-control" id="name">
-          <br>
+          <input type="text" class="form-control mb-3" id="name">
+
 
           <label for="created">Created</label>
-          <input type="date" class="form-control" id="created">
-          <br>
+          <input type="date" class="form-control mb-3" id="created">
 
           <label class="d-block" for="category">Category</label>
-          <select class="form-select" aria-label="Default select example" id="category">
+          <select class="form-select mb-3" aria-label="Default select example" id="category">
             <option value="Idea" selected>Idea</option>
             <option value="Task">Task</option>
-            <option value="Random Thought">Random Thought</option>
+            <option value="RandomThought">Random Thought</option>
           </select>
-          <br>
 
           <label for="content">Content</label>
-          <input type="text" class="form-control" id="content">
-          <br>
+          <input type="text" class="form-control mb-3" id="content">
 
-          <label for="created">Dates</label>
-          <input type="date" class="form-control" id="dates">
-          <br>
           <div class="d-flex justify-content-end mb-2">
             <button type="submit" class="btn btn-primary" form="newNotesForm" id="submit-form-btn">Create note</button>
           </div>
@@ -69,11 +66,37 @@
     </div>
 
     <div class="d-flex justify-content-end">
-      <button class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
-        aria-expanded="false" aria-controls="collapseExample" id="open-close-form-btn">
+      <button class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#create-note-form"
+        aria-expanded="false" aria-controls="create-note-form" id="open-close-form-btn">
         Create note
       </button>
     </div>
+
+    <table class="table collapse" id="archivedNotesTable">
+      <thead>
+        <tr>
+          <th colspan="6">ARCHIVED NOTES</th>
+        </tr>
+        <tr class="table-secondary">
+          <th></th>
+          <th>Name</th>
+          <th>Created</th>
+          <th>Category</th>
+          <th>Content</th>
+          <th>Dates</th>
+          <th><i class="bi bi-file-earmark-arrow-up"></i></th>
+          <th>
+            <button class="btn btn-secondary" type="button" data-bs-toggle="collapse"
+              data-bs-target="#archivedNotesTable" aria-expanded="false" aria-controls="archivedNotesTable"
+              id="open-close-form-btn">
+              <i class="bi bi-x-lg"></i>
+            </button>
+          </th>
+        </tr>
+      </thead>
+      <tbody id="body-archived-notes-table">
+      </tbody>
+    </table>
 
     <table class="table mt-5">
       <thead>
@@ -87,11 +110,11 @@
       <tbody id="body-info-table">
 
       </tbody>
-
     </table>
   </div>
 
-  <script src="/script.js"></script>
+  <script src="./script.js"></script>
+  <script src="./crudNote.js"></script>
 </body>
 
 </html>
