rename crud-note.js file

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   </div>
 
   <script src="./script.js"></script>
-  <script src="./crudNote.js"></script>
+  <script src="./crud-note.js"></script>
 </body>
 
 </html>
